--- a/src/app/consumos/consumos.page.html
+++ b/src/app/consumos/consumos.page.html
@@ -28,14 +28,14 @@
         <ion-icon name="archive"></ion-icon>
         labores
       </ion-tab-button>
-      <ion-tab-button (click)="consumos()">
-        <ion-icon name="library"></ion-icon>
-        consumos
-      </ion-tab-button>
-      
+    
       <ion-tab-button  (click)="desplaza()">
         <ion-icon name="paper-plane"></ion-icon>
         desplazamientos
+      </ion-tab-button>
+      <ion-tab-button  (click)="observ()">
+        <ion-icon name="eye"></ion-icon>
+        Observacion
       </ion-tab-button>
       <ion-tab-button  (click)="casos()">
         <ion-icon name="warning"></ion-icon>
@@ -67,25 +67,27 @@
   
 
   
-  <ion-card *ngFor="let cards of cards" style="z-index: 0;">
-    <ion-card-content>
-      <h5>{{cards.nombre}}</h5>
-      <h6>{{cards.cantidad}} {{cards.unidadmedida}}</h6>
-      <ion-button  fill="clear" style="padding-right: 3px;" (click)="eliminar(cards.idconsumooperacionservicio)">
-        <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-      </ion-button>
-    </ion-card-content>
+  <ion-card *ngFor="let cards of cards" >
+    <ion-grid>
+      <ion-row>
+        <ion-col><h5>{{cards.nombre}}</h5></ion-col>
+        <ion-col><h4>{{cards.cantidad}} {{cards.unidadmedida}}</h4></ion-col>
+        <ion-col><ion-button  fill="clear"    (click)="eliminar(cards.iddesplazamientocuadrilla)">
+          <ion-icon slot="icon-only" name="trash-outline"  size="large"></ion-icon>
+        </ion-button></ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-card>
 
 </div>
 
 
 <ion-fab slot="fixed" vertical="bottom" horizontal="end" style="margin-left: 5%;">
-  <ion-fab-button (click)="home()">
+  <ion-fab-button (click)="home()"  id="open-toast">
     <ion-icon name="home"  size="large"></ion-icon>
   </ion-fab-button>
 </ion-fab>
-
+<ion-toast trigger="open-toast" message="Se regreso al menu pricipal, operacion en pausa" [duration]="3000"></ion-toast>
 
 </ion-content>
 </div>
