--- a/src/app/labores/labores.page.html
+++ b/src/app/labores/labores.page.html
@@ -22,10 +22,6 @@
   <ion-content class="ion-padding"> 
     <ion-tabs>
       <ion-tab-bar slot="top">
-        <ion-tab-button  (click)="labores()">
-          <ion-icon name="archive"></ion-icon>
-          labores
-        </ion-tab-button>
         <ion-tab-button (click)="consumos()">
           <ion-icon name="library"></ion-icon>
           consumos
@@ -34,6 +30,10 @@
         <ion-tab-button  (click)="desplaza()">
           <ion-icon name="paper-plane"></ion-icon>
           desplazamientos
+        </ion-tab-button>
+        <ion-tab-button  (click)="observ()">
+          <ion-icon name="eye"></ion-icon>
+          Observacion
         </ion-tab-button>
         <ion-tab-button  (click)="casos()">
           <ion-icon name="warning"></ion-icon>
@@ -44,7 +44,7 @@
     </ion-tabs>
 
     <ion-item style="margin-top: 15%;">
-      <ion-select label="Labor"  label-placement="fixed" placeholder="labor a realizar" [(ngModel)]="cant">
+      <ion-select label="Labor"  label-placement="fixed" placeholder="Labor Realizada" [(ngModel)]="cant">
         <ion-select-option  value="{{laboress.id}}" *ngFor="let laboress of laboress">{{laboress.nombre}}</ion-select-option>
       </ion-select>
     </ion-item>
@@ -59,15 +59,16 @@
 
     <ion-card *ngFor="let datalabores of datalabores" style="z-index: 0;">
       <ion-card-content>
-        <h5>{{datalabores.nombre}}</h5>
+        <h3>{{datalabores.nombre}}</h3>
       </ion-card-content>
     </ion-card>
 
     <ion-fab slot="fixed" vertical="bottom" horizontal="end" style="margin-left: 5%;">
-      <ion-fab-button (click)="home()">
+      <ion-fab-button (click)="home()" id="open-toast">
         <ion-icon name="home"  size="large"></ion-icon>
       </ion-fab-button>
     </ion-fab>
+    <ion-toast trigger="open-toast" message="Se regreso al menu pricipal, operacion en pausa" [duration]="3000"></ion-toast>
 
   </ion-content>
 </div>
