--- a/src/app/mislab/mislab.page.html
+++ b/src/app/mislab/mislab.page.html
@@ -17,7 +17,7 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title></ion-title>
+      <ion-title>Generar Caso especial</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding"> 
