ft(actas):se agrego

--- a/src/app/casespecial/casespecial.page.html
+++ b/src/app/casespecial/casespecial.page.html
@@ -75,8 +75,8 @@
 </ion-card>
 
 <ion-fab slot="fixed" vertical="bottom" horizontal="end" style="margin-left: 5%;" >
-  <ion-fab-button (click)="home()" id="open-toast">
-    <ion-icon name="home"  size="large"></ion-icon>
+  <ion-fab-button (click)="acta()" id="open-toast">
+    <ion-icon name="checkmark-outline"  size="large"></ion-icon>
   </ion-fab-button>
 </ion-fab>
 <ion-toast trigger="open-toast" message="Se regreso al menu pricipal, operacion en pausa" [duration]="3000"></ion-toast>
