feat(inventario) correcion de informacion repetida al mostrar el numero de ont al tecnico en un input

--- a/src/app/actinstalacion/actinstalacion.page.html
+++ b/src/app/actinstalacion/actinstalacion.page.html
@@ -41,7 +41,7 @@
       <input  class="form-control bg-dark border-secondary text-white" [disabled]="bodegaEntraMostrar"  [(ngModel)]="serial" type="text"> <br>
     </div>
 
-    <div *ngIf="bodegaEntraMostrar">
+    <div *ngIf="bodegaEntraMostrarEspecifico">
       <label  class="form-label">Numero ont de la ont a retirar</label>
       <input  class="form-control bg-dark border-secondary text-white" [disabled]="bodegaEntraMostrar"  [(ngModel)]="numOnt" type="text"> <br>
     </div>
