--- a/src/app/casespecial/casespecial.page.html
+++ b/src/app/casespecial/casespecial.page.html
@@ -25,16 +25,20 @@
     <ion-tab-bar slot="top">
       <ion-tab-button  (click)="labores()">
         <ion-icon name="archive"></ion-icon>
-        labores
+        Labores
       </ion-tab-button>
       <ion-tab-button (click)="consumos()">
         <ion-icon name="library"></ion-icon>
-        consumos
+        Consumos
       </ion-tab-button>
       
       <ion-tab-button  (click)="desplaza()">
         <ion-icon name="paper-plane"></ion-icon>
-        desplazamientos
+        Desplazamientos
+      </ion-tab-button>
+      <ion-tab-button  (click)="actas()">
+        <ion-icon name="document-text"></ion-icon>
+        Actas
       </ion-tab-button>
       <ion-tab-button  (click)="observ()">
         <ion-icon name="eye"></ion-icon>
