--- a/src/app/consumos/consumos.page.html
+++ b/src/app/consumos/consumos.page.html
@@ -37,6 +37,10 @@
         <ion-icon name="eye"></ion-icon>
         Observacion
       </ion-tab-button>
+      <ion-tab-button  (click)="actas()">
+        <ion-icon name="document-text"></ion-icon>
+        Actas
+      </ion-tab-button>
       <ion-tab-button  (click)="casos()">
         <ion-icon name="warning"></ion-icon>
         casos especiales
