--- a/src/app/observ/observ.page.html
+++ b/src/app/observ/observ.page.html
@@ -36,6 +36,10 @@
         <ion-icon name="paper-plane"></ion-icon>
         desplazamientos
       </ion-tab-button>
+      <ion-tab-button  (click)="actas()">
+        <ion-icon name="document-text"></ion-icon>
+        Actas
+      </ion-tab-button>
       <ion-tab-button  (click)="casos()">
         <ion-icon name="warning"></ion-icon>
         casos especiales
