--- a/src/app/desp/desp.page.html
+++ b/src/app/desp/desp.page.html
@@ -36,6 +36,10 @@
           <ion-icon name="eye"></ion-icon>
           Observacion
         </ion-tab-button>
+        <ion-tab-button  (click)="actas()">
+          <ion-icon name="document-text"></ion-icon>
+          Actas
+        </ion-tab-button>
         <ion-tab-button  (click)="casos()">
           <ion-icon name="warning"></ion-icon>
           casos especiales
