--- a/src/app/actinstalacion/actinstalacion.page.html
+++ b/src/app/actinstalacion/actinstalacion.page.html
@@ -22,6 +22,9 @@
   <ion-content>
  
 
+
+ 
+
   <div class="container mt-3"  >
     <ion-tabs >
       <ion-tab-bar slot="top">
@@ -55,39 +58,39 @@
 
     <div *ngIf="bodegaSaleMostrar" >
       <label  class="form-label">Bodega de la que saldra la ont</label>
-      <select  [(ngModel)]="BodegaSale" name="BodegaSale" class="form-select p-2 mb-3 bg-dark border-secondary text-white" aria-label="Default select example">
-      <option *ngFor="let bodegaTecnico of bodegaTecnico" value="{{bodegaTecnico.ID}}"> {{bodegaTecnico.nombre}} </option>
-      </select>
+      <ion-select  [(ngModel)]="BodegaSale" name="BodegaSale" class="form-select p-2 mb-3 bg-dark border-secondary text-white" aria-label="Default select example">
+      <ion-select-option *ngFor="let bodegaTecnico of bodegaTecnico" value="{{bodegaTecnico.ID}}"> {{bodegaTecnico.nombre}} </ion-select-option>
+      </ion-select>
     </div>
 
     <div *ngIf="bodegaEntraMostrarUser">
       <label  class="form-label">Bodega a la que entrara la ont a retirar</label>
-      <select  [(ngModel)]="BodegaEntra" name="BodegaEntra" class="form-select p-2 mb-3 bg-dark border-secondary text-white" aria-label="Default select example">
-      <option *ngFor="let bodegaTecnico of bodegaTecnico" value="{{bodegaTecnico.ID}}"> {{bodegaTecnico.nombre}} </option>
-      </select>
+      <ion-select  [(ngModel)]="BodegaEntra" name="BodegaEntra" class="form-select p-2 mb-3 bg-dark border-secondary text-white" aria-label="Default select example">
+      <ion-select-option *ngFor="let bodegaTecnico of bodegaTecnico" value="{{bodegaTecnico.ID}}"> {{bodegaTecnico.nombre}} </ion-select-option>
+      </ion-select>
     </div>
 
     <div *ngIf="selectOntsRetirar">
       <label  class="form-label">Selecione que ont desea retirar de este cliente</label>
-      <select  [(ngModel)]="selectOntEspecifica" (change)="retirarOntEspecifica($event.target)" name="selectOntEspecifica" class="form-select p-2 mb-3 bg-dark border-secondary text-white" aria-label="Default select example">
-      <option *ngFor="let guardarClienteRetirar of guardarClienteRetirar" value="{{guardarClienteRetirar.numeroActivo}}"> {{guardarClienteRetirar.numeroActivo}} </option>
-      </select>
+      <ion-select   [(ngModel)]="selectOntEspecifica" (change)="retirarOntEspecifica($event.target)" name="selectOntEspecifica" class="form-select p-2 mb-3 bg-dark border-secondary text-white" aria-label="Default select example">
+      <ion-select-option *ngFor="let guardarClienteRetirar of guardarClienteRetirar" value="{{guardarClienteRetirar.numeroActivo}}"> {{guardarClienteRetirar.numeroActivo}} </ion-select-option>
+      </ion-select >
     </div>
 
     <div *ngIf="bodegaEntraMostrar">
       <label  class="form-label">Serial ont de la ont a retirar</label>
-      <input  class="form-control bg-dark border-secondary text-white" [disabled]="bodegaEntraMostrar"  [(ngModel)]="serial" type="text"> <br>
+      <ion-input  class="form-control bg-dark border-secondary text-white" [disabled]="bodegaEntraMostrar"  [(ngModel)]="serial" type="text"></ion-input> <br>
     </div>
 
     <div *ngIf="bodegaEntraMostrarEspecifico">
       <label  class="form-label">Numero ont de la ont a retirar</label>
-      <input  class="form-control bg-dark border-secondary text-white" [disabled]="bodegaEntraMostrar"  [(ngModel)]="numOnt" type="text"> <br>
+      <ion-input  class="form-control bg-dark border-secondary text-white" [disabled]="bodegaEntraMostrar"  [(ngModel)]="numOnt" type="text"></ion-input> <br>
     </div>
 
 
     <div>
       <label class="form-label">Ingrese una Descripcion (opcional) </label>
-      <input type="text" name="Descripcion" [(ngModel)]="Descripcion" class="form-control bg-dark border-secondary text-white">
+      <ion-input type="text" name="Descripcion" [(ngModel)]="Descripcion" class="form-control bg-dark border-secondary text-white"></ion-input>
     </div>
 
   </div>
@@ -102,17 +105,17 @@
           <!-- El siguiente grupo de entrada se renderiza solo si no hay resultados previos para la entrada específica (índice i). permite ingresar datos cuando no hay resultados previos para la entrada específica, evitando duplicaciones de información. -->
           <div class="input-group" *ngIf="!resultadosPorInput[i]">
 
-            <input type="number" [name]="'dynamicInputs'+i" #valorOnts [id]="'input_' + i" placeholder="Agregar ont número {{i + 1}}" class="form-control bg-dark text-white border-secondary mx-2" autofocus [(ngModel)]="dynamicInputs[i]">
+            <ion-input type="number" [name]="'dynamicInputs'+i" #valorOnts [id]="'input_' + i" placeholder="Agregar ont número {{i + 1}}" class="form-control bg-dark text-white border-secondary mx-2" autofocus [(ngModel)]="dynamicInputs[i]"></ion-input>
 
             <div class="input-group-append ">
-              <button (click)="searchONTs(valorOnts.value, i)" class="btn botonesCrearActaMovimiento  botonesActa text-white mx-1">Buscar ONTS</button>
-              <button (click)="eliminarInput(i)" class="btn btn-danger">Eliminar</button>
+           <!--   <ion-button (click)="searchONTs(valorOnts.value, i)" class="btn botonesCrearActaMovimiento  botonesActa text-white mx-1">Buscar ONTS</ion-button>-->
+              <ion-button (click)="eliminarInput(i)" class="btn btn-danger">Eliminar</ion-button>
             </div>
 
           </div>
           <!-- Mostrar el resultado específico para este input -->
           <div *ngIf="resultadosPorInput[i]" class="mt-2 d-flex align-items-center">
-            <input disabled type="text" [value]="resultadosPorInput[i].numeroActivo+
+            <ion-input disabled type="text" [value]="resultadosPorInput[i].numeroActivo+
               resultadosPorInput[i].MAC + ',' +
               resultadosPorInput[i].serial + ',' +
               resultadosPorInput[i].referencia + ','+
@@ -121,15 +124,15 @@
               resultadosPorInput[i].categoria"
               class="form-control bg-dark text-white border-secondary flex-grow-1" />
             <!-- Coloca el botón "Eliminar" al lado derecho del resultado en línea -->
-            <button (click)="eliminarInput(i)" class="btn btn-danger ml-2">Eliminar</button>
+            <ion-button (click)="eliminarInput(i)" class="btn btn-danger ml-2">Eliminar</ion-button>
           </div>
         </div>
       </div> <br>
       <div class="row">
         <div class="col-md-12 d-flex justify-content-between">
-          <button  (click)="addInput()"
+          <ion-button  (click)="addInput()"
             [disabled]="  dynamicInputs[dynamicInputs.length -1] === '' || anular  "
-            class="btn btn-success mx-2">Agregar activos fijos</button>
+            >Agregar activos fijos</ion-button>
           <!-- <button (click)="limpiar()" class="btn btn-secondary">Limpiar Campos</button> -->
         </div>
       </div>
@@ -139,15 +142,15 @@
 
       <div >
 
-        <button  type="button" (click)="crearActa()"  class="btn  botonesActa text-white">Crear Acta</button>
+        <ion-button  type="button" (click)="crearActa()" >Crear Acta</ion-button>
 
       </div>
     </div>
 
 
 
+  </ion-content>
 
-</ion-content>
 
 <ion-fab slot="fixed" vertical="bottom" horizontal="end" style="margin-left: 5%;" >
   <ion-fab-button (click)="acta()" id="open-toast">
