--- a/src/app/actinstalacion/actinstalacion.page.html
+++ b/src/app/actinstalacion/actinstalacion.page.html
@@ -58,7 +58,7 @@
 
     <div *ngIf="bodegaSaleMostrar" >
       <label  class="form-label">Bodega de la que saldra la ont</label>
-      <ion-select  [(ngModel)]="BodegaSale" name="BodegaSale" class="form-select p-2 mb-3 bg-dark border-secondary text-white" aria-label="Default select example">
+      <ion-select  [(ngModel)]="BodegaSale" name="BodegaSale" interface="popover"  aria-label="Default select example">
       <ion-select-option *ngFor="let bodegaTecnico of bodegaTecnico" value="{{bodegaTecnico.ID}}"> {{bodegaTecnico.nombre}} </ion-select-option>
       </ion-select>
     </div>
