--- a/src/app/casespecial/casespecial.page.html
+++ b/src/app/casespecial/casespecial.page.html
@@ -38,7 +38,7 @@
       </ion-tab-button>
       <ion-tab-button  (click)="actas()">
         <ion-icon name="document-text"></ion-icon>
-        Actas
+        Inventario
       </ion-tab-button>
       <ion-tab-button  (click)="observ()">
         <ion-icon name="eye"></ion-icon>
