--- a/src/app/observ/observ.page.html
+++ b/src/app/observ/observ.page.html
@@ -38,7 +38,7 @@
       </ion-tab-button>
       <ion-tab-button  (click)="actas()">
         <ion-icon name="document-text"></ion-icon>
-        Actas
+        Inventario
       </ion-tab-button>
       <ion-tab-button  (click)="casos()">
         <ion-icon name="warning"></ion-icon>
