fix(general):corrección de formato

--- a/src/app/consumos/consumos.page.html
+++ b/src/app/consumos/consumos.page.html
@@ -35,7 +35,7 @@
       </ion-tab-button>
       <ion-tab-button  (click)="observ()">
         <ion-icon name="eye"></ion-icon>
-        Observacion
+        Observación
       </ion-tab-button>
       <ion-tab-button  (click)="actas()">
         <ion-icon name="document-text"></ion-icon>
