--- a/src/app/desp/desp.page.html
+++ b/src/app/desp/desp.page.html
@@ -26,23 +26,23 @@
       <ion-tab-bar slot="top">
         <ion-tab-button  (click)="labores()">
           <ion-icon name="archive"></ion-icon>
-          labores
+          Labores
         </ion-tab-button>
         <ion-tab-button (click)="consumos()">
           <ion-icon name="library"></ion-icon>
-          consumos
+          Consumos
         </ion-tab-button>
         <ion-tab-button  (click)="observ()">
           <ion-icon name="eye"></ion-icon>
-          Observacion
+          Observación
         </ion-tab-button>
         <ion-tab-button  (click)="actas()">
           <ion-icon name="document-text"></ion-icon>
-          Inventario
+          Actas
         </ion-tab-button>
         <ion-tab-button  (click)="casos()">
           <ion-icon name="warning"></ion-icon>
-          casos especiales
+          Casos Especiales
         </ion-tab-button>
     
       </ion-tab-bar>
