--- a/src/app/labores/labores.page.html
+++ b/src/app/labores/labores.page.html
@@ -16,7 +16,7 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>Labores Operacion</ion-title>
+      <ion-title>Labores Operación</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding"> 
@@ -24,24 +24,24 @@
       <ion-tab-bar slot="top">
         <ion-tab-button (click)="consumos()">
           <ion-icon name="library"></ion-icon>
-          consumos
+          Consumos
         </ion-tab-button>
         
         <ion-tab-button  (click)="desplaza()">
           <ion-icon name="paper-plane"></ion-icon>
-          desplazamientos
+          Desplazamientos
         </ion-tab-button>
         <ion-tab-button  (click)="observ()">
           <ion-icon name="eye"></ion-icon>
-          Observacion
+          Observación
         </ion-tab-button>
         <ion-tab-button  (click)="actas()">
           <ion-icon name="document-text"></ion-icon>
-          Inventario
+          Actas
         </ion-tab-button>
         <ion-tab-button  (click)="casos()">
           <ion-icon name="warning"></ion-icon>
-          casos especiales
+          Casos Especiales
         </ion-tab-button>
     
       </ion-tab-bar>
