--- a/src/app/menupersonal/menupersonal.page.html
+++ b/src/app/menupersonal/menupersonal.page.html
@@ -16,14 +16,14 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>Menu Personal</ion-title>
+      <ion-title>Menú Personal</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding"> 
 
     <ion-card >
       <ion-card-header>
-        <ion-card-title>Menu Personal Cuadrillas</ion-card-title>
+        <ion-card-title>Menú Personal Cuadrillas</ion-card-title>
       </ion-card-header>
     
       <ion-card-content >
