--- a/src/app/casespecial/casespecial.page.html
+++ b/src/app/casespecial/casespecial.page.html
@@ -38,11 +38,11 @@
       </ion-tab-button>
       <ion-tab-button  (click)="actas()">
         <ion-icon name="document-text"></ion-icon>
-        Inventario
+        Actas
       </ion-tab-button>
       <ion-tab-button  (click)="observ()">
         <ion-icon name="eye"></ion-icon>
-        Observacion
+        Observación
       </ion-tab-button>
       
     </ion-tab-bar>
@@ -55,7 +55,7 @@
 
   <ion-card-content>
     <ion-item>
-      <ion-input label="Descripcion" placeholder="" [(ngModel)]="descrip"></ion-input>
+      <ion-input label="Descripción" placeholder="" [(ngModel)]="descrip"></ion-input>
     </ion-item>
 
     <ion-item style="margin-bottom: 50px;">
