--- a/src/app/mislab/mislab.page.html
+++ b/src/app/mislab/mislab.page.html
@@ -29,7 +29,7 @@
     
       <ion-card-content>
         <ion-item>
-          <ion-input label="Descripcion" placeholder="" [(ngModel)]="descrip"></ion-input>
+          <ion-input label="Descripción" placeholder="" [(ngModel)]="descrip"></ion-input>
         </ion-item>
     
         <ion-item style="margin-bottom: 50px;">
